--- a/index.html
+++ b/index.html
@@ -12,14 +12,61 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+      <h1>Tic Tac Toe</h1>
+      <form id="sign-up">
+              <fieldset>
+                <legend>Sign up!</legend>
+                  <label>
+                  Email
+                  <input type="text" name="credentials[email]">
+                  </label>
+                  <label>
+                  Password
+                  <input type="password" name="credentials[password]">
+                  </label>
+                  <label>
+                  Password Confirmtion
+                  <input type="password" name="credentials[password_confirmation]">
+                  </label>
+                <input type="submit" name="submit" value="Sign up!">
+              </fieldset>
+            </form>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+            <form id="sign-in">
+              <fieldset>
+                <legend>Sign In!</legend>
+                  <label>
+                  Email
+                  <input type="text" name="credentials[email]">
+                  </label>
+                  <label>
+                  Password
+                  <input type="password" name="credentials[password]">
+                  </label>
+                <input type="submit" name="submit" value="Sign In!">
+              </fieldset>
+            </form>
+
+            <form id="change-password">
+              <fieldset>
+                <legend>Change Password</legend>
+                  <label>
+                  OLD
+                  <input type="text" name="passwords[new]">
+                  </label>
+                  <label>
+                  NEW
+                  <input type="text" name="passwords[old]">
+                  </label>
+              </fieldset>
+            </form>
+
+            <form id="sign-out">
+              <fieldset>
+                <legend>Sign Out!</legend>
+                <input type="submit" name="submit" value="Sign Out!">
+              </fieldset>
+            </form>
+
     </body>
 </html>
