--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 
       <div class="board">
         <div class="row">
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
+          <div class="col-xs-4 field" data-position="0"></div>
+          <div class="col-xs-4 field" data-position="1"></div>
+          <div class="col-xs-4 field" data-position="2"></div>
         </div>
         <div class="row">
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
+          <div class="col-xs-4 field" data-position="3"></div>
+          <div class="col-xs-4 field" data-position="4"></div>
+          <div class="col-xs-4 field" data-position="5"></div>
         </div>
         <div class="row">
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
+          <div class="col-xs-4 field" data-position="6"></div>
+          <div class="col-xs-4 field" data-position="7"></div>
+          <div class="col-xs-4 field" data-position="8"></div>
         </div>
       </div>
 
