--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
+
     <body>
       <h1>Tic Tac Toe</h1>
 
       <div class="board">
         <div class="row">
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
+          <div class="col-xs-4 field" data-position="0"></div>
+          <div class="col-xs-4 field" data-position="1"></div>
+          <div class="col-xs-4 field" data-position="2"></div>
         </div>
         <div class="row">
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
+          <div class="col-xs-4 field" data-position="3"></div>
+          <div class="col-xs-4 field" data-position="4"></div>
+          <div class="col-xs-4 field" data-position="5"></div>
         </div>
         <div class="row">
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
-          <div class="col-xs-4 field"></div>
+          <div class="col-xs-4 field" data-position="6"></div>
+          <div class="col-xs-4 field" data-position="7"></div>
+          <div class="col-xs-4 field" data-position="8"></div>
         </div>
       </div>
 
