Added Reset Button to HTML (no functionality)

--- a/index.html
+++ b/index.html
@@ -110,5 +110,8 @@
         </div>
       </div>
 
+      <button class="btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Reset</button>
+
     </body>
+
 </html>
