Made reset button clear html from squares. Removed alert for win, replaced console log

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
       </div>
 
-      <button class="btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Reset</button>
+      <button class="btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Reset Board</button>
 
     </body>
 
