--- a/index.html
+++ b/index.html
@@ -13,26 +13,6 @@
     </head>
 
     <body>
-      <h1>Tic Tac Toe</h1>
-
-      <div class="board">
-        <div class="row">
-          <div class="col-xs-4 field" data-position="0"></div>
-          <div class="col-xs-4 field" data-position="1"></div>
-          <div class="col-xs-4 field" data-position="2"></div>
-        </div>
-        <div class="row">
-          <div class="col-xs-4 field" data-position="3"></div>
-          <div class="col-xs-4 field" data-position="4"></div>
-          <div class="col-xs-4 field" data-position="5"></div>
-        </div>
-        <div class="row">
-          <div class="col-xs-4 field" data-position="6"></div>
-          <div class="col-xs-4 field" data-position="7"></div>
-          <div class="col-xs-4 field" data-position="8"></div>
-        </div>
-      </div>
-
       <!-- Button trigger modal -->
       <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
         Sign In
@@ -110,7 +90,30 @@
         </div>
       </div>
 
-      <button class="btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Reset Board</button>
+      <div class="banner"></div>
+
+
+      <h1>Tic Tac Toe</h1>
+
+      <div class="board">
+        <div class="row">
+          <div class="col-xs-4 field" data-position="0"></div>
+          <div class="col-xs-4 field" data-position="1"></div>
+          <div class="col-xs-4 field" data-position="2"></div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 field" data-position="3"></div>
+          <div class="col-xs-4 field" data-position="4"></div>
+          <div class="col-xs-4 field" data-position="5"></div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 field" data-position="6"></div>
+          <div class="col-xs-4 field" data-position="7"></div>
+          <div class="col-xs-4 field" data-position="8"></div>
+        </div>
+      </div>
+
+      <button class="btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Play Again!</button>
 
     </body>
 
