--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <button class="btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Play Again!</button>
+      <button class="col-md-12 btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Play Again!</button>
 
     </body>
 
