fixed all overwritten variables and changed the check gameover function

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
       </div>
 
-      <button class="col-md-12 btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Play Again!</button>
+      <button class="col-md-12 btn btn-index" type="submit" data-toggle="reset" data-target=".board">Past Games</button>
 
 
     </body>
