--- a/index.html
+++ b/index.html
@@ -15,61 +15,108 @@
     <body>
 
       <div class="userInfo">
-                <form id="sign-up">
-                        <fieldset>
-                          <legend>Sign up!</legend>
-                            <label>
-                            Email
-                            <input type="text" name="credentials[email]">
-                            </label>
-                            <label>
-                            Password
-                            <input type="password" name="credentials[password]">
-                            </label>
-                          <input type="submit" name="submit" value="Sign up!">
-                        </fieldset>
-                      </form>
+        <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+            Sign Up
+          </button>
 
-                      <form id="sign-in">
-                        <fieldset>
-                          <legend>Sign In!</legend>
-                            <label>
-                            Email
-                            <input type="text" name="credentials[email]">
-                            </label>
-                            <label>
-                            Password
-                            <input type="password" name="credentials[password]">
-                            </label>
-                          <input type="submit" name="submit" value="Sign In!">
-                        </fieldset>
-                      </form>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">New User</h4>
+                </div>
+                <div class="modal-body">
+                  <form id="sign-up">
+                          <fieldset>
+                              <label>
+                              Email
+                              <input type="text" name="credentials[email]">
+                              </label>
+                              <label>
+                              Password
+                              <input type="password" name="credentials[password]">
+                              </label>
+                            <input type="submit" name="submit" value="Sign up!">
+                          </fieldset>
+                        </form>
 
-                      <form id="change-password">
-                        <fieldset>
-                          <legend>Change Password</legend>
-                            <label>
-                            OLD
-                            <input type="text" name="passwords[new]">
-                            </label>
-                            <label>
-                            NEW
-                            <input type="text" name="passwords[old]">
-                            </label>
-                        </fieldset>
-                      </form>
-
-                      <form id="sign-out">
-                        <fieldset>
-                          <legend>Sign Out!</legend>
-                          <input type="submit" name="submit" value="Sign Out!">
-                        </fieldset>
-                      </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
               </div>
+            </div>
+          </div>
 
+
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+            Change Password
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Change Password</h4>
+                </div>
+                <div class="modal-body">
+                  <form id="change-password">
+                    <fieldset>
+                      <legend>Change Password</legend>
+                        <label>
+                        OLD
+                        <input type="text" name="passwords[new]">
+                        </label>
+                        <label>
+                        NEW
+                        <input type="text" name="passwords[old]">
+                        </label>
+                    </fieldset>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+      <div>
+          <form id="sign-in">
+            <fieldset>
+              <legend>Existing User Sign In</legend>
+                <label>
+                Email
+                <input type="text" name="credentials[email]">
+                </label>
+                <label>
+                Password
+                <input type="password" name="credentials[password]">
+                </label>
+              <input type="submit" name="submit" value="Sign In!">
+            </fieldset>
+          </form>
+
+          <form id="sign-out">
+            <fieldset>
+              <input type="submit" name="submit" value="Sign Out!">
+            </fieldset>
+          </form>
+      </div>
+
+      </div>
+
+      <div class="winner"></div>
       <div class="banner"></div>
       <button class="col-md-12 btn btn-create" type="submit" data-toggle="create" data-target=".board">Play New Game!</button>
-
       <div>
           <form id="show-game">
               <fieldset>
@@ -101,8 +148,7 @@
         </div>
       </div>
 
-      <button class="col-md-12 btn btn-index" type="submit" data-toggle="reset" data-target=".board">Past Games</button>
-
+      <!-- <button class="col-md-12 btn btn-danger" type="reset" data-toggle="reset" data-target=".board">Play Again!</button> -->
 
     </body>
 
