fixed loading problem and unfloated create button

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <h1>Tic Tac Toe</h1>
 
       <div class="game-actions">
-        <button class="col-md-12 btn btn-primary btn-create" type="submit" data-toggle="create" data-target=".board">Play New Game!</button>
+        <button class="btn btn-primary btn-create" type="submit" data-toggle="create" data-target=".board">Play New Game!</button>
         <div class="winner"></div>
         <div class="banner"></div>
       </div>
