made some style changes including button hides, fonts. also updated the links in readme

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       <!-- Do not add `script` tags unless you know what you are doing -->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-      <style>
-        @import url('https://http://www.dafont.com/chalky-chicken.font');
-      </style>
+      <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
 
     </head>
 
@@ -164,7 +162,7 @@
       </div>
 
 
-
+<!--
       <div>
           <form id="show-game">
               <fieldset>
@@ -175,7 +173,7 @@
               </fieldset>
               <button class="col-md-12 btn btn-show" type="submit" data-toggle="show" data-target=".board">Show Games</button>
           </form>
-      </div>
+      </div> -->
     </div>
 
     <button type="button" name="button" class="btn-index btn btn-primary">Show Games Played</button>
