--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
                     Sign Up
                   </button>
 
-                  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#changePass">
-                    Change Password
-                  </button>
 
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -102,6 +99,9 @@
           </div>
         </div>
 
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#changePass">
+          Change Password
+        </button>
         <!-- Modal -->
         <div class="modal fade" id="changePass" tabindex="-1" role="dialog" aria-labelledby="changePass">
           <div class="modal-dialog" role="document">
@@ -122,12 +122,12 @@
                       NEW
                       <input type="text" name="passwords[old]">
                       </label>
+                      <button type="submit">submit</button>
                   </fieldset>
                 </form>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
               </div>
             </div>
           </div>
