Changed Tab Title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic Tac Mario</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags unless you know what you are doing -->
@@ -58,7 +58,6 @@
               </div>
             </div>
           </div>
-
             <button id="sign-out" class="btn btn-primary btn-lg">Sign Out</button>
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary btn-lg btn-sign-in" data-toggle="modal" data-target="#signIn">
