--- a/index.html
+++ b/index.html
@@ -18,20 +18,62 @@
 
       <div class="container">
         <nav>
-          <div class="sign-in">
-            <!-- Modal -->
-            <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="Sign In">
-              <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="signIn">Sign In</h4>
+            <div class="sign-in">
+              <!-- Modal -->
+              <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="Sign In">
+                <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="signIn">Sign In</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div>
+                          <form id="sign-in">
+                            <fieldset>
+                              <legend>Existing User Sign In</legend>
+                                <label>
+                                Email
+                                <input type="text" name="credentials[email]">
+                                </label>
+                                <label>
+                                Password
+                                <input type="password" name="credentials[password]">
+                                </label>
+                              <input type="submit" name="submit" value="Sign In!">
+                            </fieldset>
+                          </form>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#signUp">
+                      Sign Up
+                    </button>
+
+
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+
                   </div>
-                  <div class="modal-body">
-                    <div>
-                        <form id="sign-in">
+                </div>
+              </div>
+            </div>
+              <button id="sign-out" class="btn btn-primary btn-lg ">Sign Out</button>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary btn-lg btn-sign-in" data-toggle="modal" data-target="#signIn">
+                Sign In
+              </button>
+          <!-- Modal -->
+          <div class="modal fade" id="signUp" tabindex="-1" role="dialog" aria-labelledby="signUp">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="signUp" id="signUp">New User</h4>
+                </div>
+                <div class="modal-body">
+                  <form id="sign-up">
                           <fieldset>
-                            <legend>Existing User Sign In</legend>
                               <label>
                               Email
                               <input type="text" name="credentials[email]">
@@ -40,99 +82,60 @@
                               Password
                               <input type="password" name="credentials[password]">
                               </label>
-                            <input type="submit" name="submit" value="Sign In!">
+                              <label>
+                              Password Confirmation
+                              <input type="password" name="credentials[password_confirmation]">
+                              </label>
+                            <button type="submit">submit</button>
                           </fieldset>
                         </form>
-                      </div>
-                  </div>
-                  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#signUp">
-                    Sign Up
-                  </button>
 
-
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
           </div>
-            <button id="sign-out" class="btn btn-primary btn-lg">Sign Out</button>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary btn-lg btn-sign-in" data-toggle="modal" data-target="#signIn">
-              Sign In
-            </button>
-        <!-- Modal -->
-        <div class="modal fade" id="signUp" tabindex="-1" role="dialog" aria-labelledby="signUp">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="signUp" id="signUp">New User</h4>
-              </div>
-              <div class="modal-body">
-                <form id="sign-up">
-                        <fieldset>
-                            <label>
-                            Email
-                            <input type="text" name="credentials[email]">
-                            </label>
-                            <label>
-                            Password
-                            <input type="password" name="credentials[password]">
-                            </label>
-                            <label>
-                            Password Confirmation
-                            <input type="password" name="credentials[password_confirmation]">
-                            </label>
-                          <button type="submit">submit</button>
-                        </fieldset>
-                      </form>
 
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary btn-change-pass" data-toggle="modal" data-target="#changePassword">
+            Change Password
+          </button>
+          <!-- Modal -->
+          <div class="modal fade" id="changePassword" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="changePassword">Change Password</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form id="change-password">
+                    <fieldset>
+                      <legend>Change Password</legend>
+                        <label>
+                        OLD
+                        <input type="text" name="passwords[old]">
+                        </label>
+                        <label>
+                        NEW
+                        <input type="text" name="passwords[new]">
+                        </label>
+                        <input type="submit" name="submit" value="Submit">
+                    </fieldset>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#changePass">
-          Change Password
-        </button>
-        <!-- Modal -->
-        <div class="modal fade" id="changePass" tabindex="-1" role="dialog" aria-labelledby="changePass">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="changePass" id="changePass">Change Password</h4>
-              </div>
-              <div class="modal-body">
-                <form id="change-password">
-                  <fieldset>
-                    <legend>Change Password</legend>
-                      <label>
-                      OLD
-                      <input type="text" name="passwords[new]">
-                      </label>
-                      <label>
-                      NEW
-                      <input type="text" name="passwords[old]">
-                      </label>
-                      <button type="submit">submit</button>
-                  </fieldset>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
         </nav>
+
 
       <h1>Tic Tac Toe</h1>
 
@@ -159,7 +162,7 @@
           <div class="col-xs-4 field" data-position="8"></div>
         </div>
       </div>
-
+    </div>
 
 <!--
       <div>
@@ -173,7 +176,7 @@
               <button class="col-md-12 btn btn-show" type="submit" data-toggle="show" data-target=".board">Show Games</button>
           </form>
       </div> -->
-    </div>
+    <!-- </div> -->
 
     <button type="button" name="button" class="btn-index btn btn-primary">Show Games Played</button>
 
