--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                                 </label>
                               <input type="submit" name="submit" value="Sign In!">
                             </fieldset>
+                            <div class="wrongCred"></div>
                           </form>
                         </div>
                     </div>
@@ -126,6 +127,7 @@
                         </label>
                         <input type="submit" name="submit" value="Submit">
                     </fieldset>
+                    <div class="wrongCredChange"></div>
                   </form>
                 </div>
                 <div class="modal-footer">
@@ -180,9 +182,7 @@
 
     <button type="button" name="button" class="btn-index btn btn-primary">Show Games Played</button>
 
-    <div class="showgames">
-
-    </div>
+    <div class="showgames"></div>
 
     </body>
 
