--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                           </form>
                         </div>
                     </div>
+                    <legend>Don't have a username? Sign up here!</legend>
                     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#signUp">
                       Sign Up
                     </button>
@@ -60,7 +61,6 @@
                 </div>
               </div>
             </div>
-              <button id="sign-out" class="btn btn-primary btn-lg ">Sign Out</button>
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-primary btn-lg btn-sign-in" data-toggle="modal" data-target="#signIn">
                 Sign In
@@ -138,6 +138,7 @@
               </div>
             </div>
           </div>
+          <button id="sign-out" class="btn btn-primary btn-lg ">Sign Out</button>
         </nav>
 
 
