--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-primary btn-lg btn-sign-in" data-toggle="modal" data-target="#signIn">
-                Sign In
+                Sign In to Play!
               </button>
           <!-- Modal -->
           <div class="modal fade" id="signUp" tabindex="-1" role="dialog" aria-labelledby="signUp">
